10/1 수업중 실습과제

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.hwp
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,windows
